tests/ui/parser/macro/lit-err-in-macro.stderr
error: suffixes on string literals are invalid
  --> $DIR/lit-err-in-macro.rs:7:4
   |
LL | f!("Foo"__);
   |    ^^^^^^^ invalid suffix `__`

warning: `extern` declarations without an explicit ABI are deprecated
  --> $DIR/lit-err-in-macro.rs:3:9
   |
LL |         extern $abi fn f() {}
   |         ^^^^^^ help: explicitly specify the "C" ABI: `extern "C"`
...
LL | f!("Foo"__);
   | ----------- in this macro invocation
   |
   = note: `#[warn(missing_abi)]` on by default
   = note: this warning originates in the macro `f` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error; 1 warning emitted

